# yahoo-fantasy-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.py  oauth2.json  pyproject.toml  schemas.py  server.py  yahoo_parsers.py
.github/: dependabot.yml
.github/workflows/: test.yml
tests/: __init__.py  conftest.py  fixtures.py  test_config.py  test_parsers.py  test_schemas.py  test_server_helpers.py
