[project]
name = "yahoo-fantasy-mcp"
version = "0.1.0"
description = "MCP server for Yahoo Fantasy Baseball"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "yahoo_fantasy_api",
    "yahoo_oauth",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# Defaults (E4/E7/E9 + pyflakes F — catches unused imports, undefined names)
# plus I for import sorting. Keep this conservative: it should catch real
# drift, not fight the existing style.
extend-select = ["I"]