[project]
name = "yahoo-fantasy-mcp"
version = "2.1.0"
description = "MCP server for Yahoo Fantasy Sports (baseball, football)"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.28.1",
    "yahoo_fantasy_api>=2.12.2",
    "yahoo_oauth>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = ["pytest>=9.1.1", "ruff>=0.15.22"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
# Defaults (E4/E7/E9 + pyflakes F — catches unused imports, undefined names)
# plus I for import sorting. Keep this conservative: it should catch real
# drift, not fight the existing style.
extend-select = ["I"]